fixing layout shift and giving srcset hint

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -111,7 +111,7 @@ a:visited {
 .cta {
   display: block;
   width: 100%;
-  max-height: 25cqw;
+  aspect-ratio: 4/1;
   object-fit: cover;
   border-radius: inherit;
 }
@@ -131,9 +131,8 @@ a:visited {
 .lain {
   display: block;
   width: 100%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 8px;
+  aspect-ratio: 1979/231;
+  border-radius: inherit;
 }
 
 .content-grid {
